--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "is-my-json-valid": "^2.20.6",
+    "joi": "^17.9.2",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "eslint": "^8.38.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   }
 }
